[gd_scene load_steps=7 format=3 uid="uid://u86114strhxn"]

[ext_resource type="Script" uid="uid://3fr0oemvd5jy" path="res://scenes/menus/stageSelection/stagePanel/stage_information.gd" id="1_jst74"]
[ext_resource type="Texture2D" uid="uid://d1fa7uefvniqx" path="res://assets/menu/sprites/green_check.png" id="1_lh50f"]
[ext_resource type="Script" uid="uid://d17bakipvd7ey" path="res://scenes/menus/stageSelection/stagePanel/enemyTeamPreview/enemy_team_preview.gd" id="2_dp4hg"]
[ext_resource type="Texture2D" uid="uid://b6ex23e5c1ck1" path="res://assets/menu/button/GREEN.png" id="4_qxpgq"]
[ext_resource type="Texture2D" uid="uid://g55yakoh2etj" path="res://assets/menu/backgrounds/PRESSED.png" id="5_1no0l"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_tit23"]
load_path = "res://.godot/imported/testDummy_idle.png-87511388f462955f4b06064f9b34d75b.ctex"

[node name="StageInformation" type="VBoxContainer"]
offset_right = 468.0
offset_bottom = 579.0
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0
script = ExtResource("1_jst74")

[node name="NameAndDifficulty" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="StageName" type="RichTextLabel" parent="NameAndDifficulty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stage Name"
vertical_alignment = 1

[node name="StageDifficulty" type="RichTextLabel" parent="NameAndDifficulty"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Stage Dificulty"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyTeamPreview" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_direction = 2
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 6.0
script = ExtResource("2_dp4hg")

[node name="TemplateEnemyIcon" type="TextureRect" parent="EnemyTeamPreview"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = SubResource("CompressedTexture2D_tit23")
expand_mode = 1
stretch_mode = 4

[node name="StageDescription" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
text = "orem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"

[node name="StartButtonAndTick" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.6

[node name="MarginContainer" type="MarginContainer" parent="StartButtonAndTick"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StartButton" type="TextureButton" parent="StartButtonAndTick/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_qxpgq")
texture_pressed = ExtResource("5_1no0l")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="StartButtonAndTick/MarginContainer/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.1667
offset_right = 20.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
text = "LET'S GO!"

[node name="CheckMargin" type="MarginContainer" parent="StartButtonAndTick"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="CompletedCheck" type="TextureRect" parent="StartButtonAndTick/CheckMargin"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("1_lh50f")
expand_mode = 1
stretch_mode = 4

[connection signal="pressed" from="StartButtonAndTick/MarginContainer/StartButton" to="." method="_on_start_button_pressed"]
